--- a/plot_title_embeddings.ipynb
+++ b/plot_title_embeddings.ipynb
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "JgMSYS6EHOVC"
       },
-      "execution_count": 23,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -235,32 +235,20 @@
         "    title_text = document.get('title', '')  # Assuming 'title' field exists in the documents\n",
         "    plot_embedding = np.array(get_embedding(plot_text))  # Assuming get_embedding returns ndarray\n",
         "    title_embedding = np.array(get_embedding(title_text))  # Assuming get_embedding returns ndarray\n",
-        "    embeddings_dict[movie_id] = {'plot': plot_embedding.tolist(), 'title': title_embedding.tolist()}\n",
         "\n",
+        "    plot_embedding_stripped = np.round_(plot_embedding, decimals = 6)\n",
+        "    title_embedding_stripped = np.round_(title_embedding, decimals = 6)\n",
         "\n",
-        "# Save the embeddings dictionary to the new collection\n",
-        "embedding_collection.insert_one(embeddings_dict)"
+        "    embeddings_dict = {'id':movie_id, 'plot': plot_embedding_stripped.tolist(), 'title': title_embedding_stripped.tolist()}\n",
+        "    embedding_collection.insert_one(embeddings_dict)\n",
+        "\n",
+        "# Save the embeddings dictionary to the new collection\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vk1yIzPjHch5",
-        "outputId": "b751a943-f0b0-475a-c6db-02eda0966b64"
+        "id": "vk1yIzPjHch5"
       },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "InsertOneResult(ObjectId('660743803473a396ddee68eb'), acknowledged=True)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
-        }
-      ]
+      "execution_count": 50,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -292,6 +280,15 @@
       ],
       "metadata": {
         "id": "uYzu0yxPHkci"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SxtdlSOlcHYX"
       },
       "execution_count": null,
       "outputs": []
